# nifty

./: .gitignore  CMakeLists.txt  README.md  bi.sh  build.sh  errors.nifty  install.sh  main.cpp  makefile  nifty-spec-final.nifty  nifty-spec-removed.nifty  nifty-spec.nifty  notes.nifty  nsl-ideas.nifty  scc.bat  scc.txt  scratch.nifty
bench/binarytrees/: binarytrees.nifty  nifty.toml
bench/pi/: build.toml  pi.nifty
benchmark/pi/: pi.nifty
example/beforeAfter/: beforeAfter.nifty
example/fizzbuzz/: fizzbuzz.nifty
example/hello/: hello.nifty
example/reflection/: reflection.nifty
examples/: build.toml  example.test.nifty  fizzbuzz.nifty  functions.nifty  hello.nifty  hellos.nifty  loops.nifty  operatorOverload.nifty  reflection.nifty  structs.nifty  variables.nifty
highlighting/chroma/: nifty.xml
nsl/: array.nifty  math.nifty
nsl/array/: array.nifty
nsl/ascii/: ascii.nifty
nsl/builtin/: calling_convention.nifty
nsl/containers/: map.nifty
nsl/error/: error.nifty  errorable.nifty
nsl/flags/: flags.nifty
nsl/iter/: iter.nifty
nsl/log/: log.nifty
nsl/math/: integer.nifty  math.nifty  random.nifty
nsl/mem/: allocator.nifty
nsl/optional/: optional.nifty
nsl/runtime/: core.nifty
nsl/strconv/: bool.nifty  numbers.nifty  types.nifty
nsl/string/: bool.nifty  string.nifty
nsl/testing/: expect.nifty  test.nifty  types.nifty
nsl/time/: time.nifty
nsl/types/: util.nifty
src/: ast.h  buildConfig.cpp  buildConfig.hpp  codegen.cpp  codegen.hpp  codegenC.cpp  codegenC.hpp  common.h  common.hpp  compiler.cpp  compiler.hpp  help.cpp  help.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  main.c  main.cpp  node.cpp  node.hpp  package.cpp  package.hpp  parser.c  parser.cpp  parser.h  parser.hpp  project.c  project.cpp  project.h  project.hpp  symbol.c  symbol.h  symbolTable.cpp  symbolTable.hpp  table.c  table.h  testing.h  token.cpp  token.hpp  (+2 more)
src/util/: help.c  help.h  str.c  str.cpp  str.h  str.hpp
tests/: basic.test.nifty
tests/lang/: struct.test.nifty  while.test.nifty
tst/basic/: _nifty_generated_c.c  basicTest.nifty  basicTestDefault.nifty  build.toml  four.ny  (+3 more)
(+18 files in other folders)
